- added dist folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div id="content-container" class="column">
+<div id="content-container" class="column" style="height: 100vh">
     <!-- Header -->
     <div class="row" style="background-color: black;padding: 1em;font-size: .8em;height: 5em;align-items: center">
         <h1>Minesweeper</h1>
@@ -34,10 +34,13 @@
         </div>
     </div>
     
-    <div id="minefieldContainer" class="column"></div>
+    <div id="minefieldContainer" class="column" style="margin: auto;justify-self: center">
+        <p>Wow such empty! Click on generate button to get started</p></div>
     
+    <div class="row" style="height: fit-content;justify-content: center;justify-self: flex-end;margin-top: auto;padding: 1em">
+        <p style="font-size: .8em">Created by ultr42 | Github: <a href="https://github.com/ultraflame4">github.com/ultraflame4</a>
+                                    | Website: <a href="https://ultraflame4.github.io/">ultraflame4.github.io/</a></p></div>
 </div>
-
 
 </body>
 </html>
