--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
     <div class="row" style="height: fit-content;justify-content: center;justify-self: flex-end;margin-top: auto;padding: 1em">
         <p style="font-size: .8em">Created by ultr42 | Github: <a href="https://github.com/ultraflame4">github.com/ultraflame4</a>
-                                    | Website: <a href="https://ultraflame4.github.io/">ultraflame4.github.io/</a></p></div>
+                                    | Website: <a href="https://ultraflame4.github.io/">ultraflame4.github.io/</a>| Email: <a href="mailto: ultraflame4@gmail.com">ultraflame4@gmail.com</a></p></div>
 </div>
 
 </body>
